Fixes responsiveness on mobile

--- a/assets/css/_body.scss
+++ b/assets/css/_body.scss
@@ -185,7 +185,6 @@ a:hover {
   }
 
   #profile-pic {
-    max-width: 300px;
     margin-bottom: 2em;
   }
 
