--- a/assets/css/_header.scss
+++ b/assets/css/_header.scss
@@ -15,7 +15,7 @@
         display: inline-block;
         padding: .8em;
         padding-bottom: 0;
-        max-height: 8em;
+        max-height: 7em;
         width: auto;
         margin-right: auto;
         margin-left: auto;
